--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,9 @@
-# Python junk
+venv/
 __pycache__/
 *.pyc
 *.pyo
-
-# Virtualenv
-venv/
-
-# Local config / secrets (if you add a .env later)
+*.DS_Store
 .env
-.env.*
-
-# Runtime data
-media.db
-instance/
 uploads/
-
-# OS/editor stuff
-.DS_Store
-Thumbs.db
-
+*.db
+*.sqlite3
